tests/baselines/reference/enumConstantMembers.errors.txt
tests/cases/conformance/enums/enumConstantMembers.ts(20,9): error TS1066: Ambient enum initializer must be a constant expression.
tests/cases/conformance/enums/enumConstantMembers.ts(29,9): error TS2474: 'const' enum initializer must be a constant expression.


==== tests/cases/conformance/enums/enumConstantMembers.ts (2 errors) ====
    // Enum members with no initilizer increment from last valid constant value.
    enum E1 {
        a = 1,
        b
    }
    enum E2 {
        a = - 1,
        b
    }
    enum E3 {
        a = 0.1,
        b // b is 1.1
    }
    
    declare enum E4 {
        a = 1,
        b = -1,
        c = 0.1,
        d, // d is 1.1
        e = invalid,
            ~~~~~~~
!!! error TS1066: Ambient enum initializer must be a constant expression.
        f // f is 2.1
    }
    
    const enum E5 {
        a = 1,
        b = -1,
        c = 0.1,
        d, // d is 1.1
        e = invalid,
            ~~~~~~~
!!! error TS2474: 'const' enum initializer must be a constant expression.
        f // f is 2.1
    }
    